--- a/styles.css
+++ b/styles.css
@@ -446,7 +446,14 @@ if there only was one booking option. */
     height: -webkit-fill-available; /* WebKit-specific implementation */
     object-fit: cover;
     max-height: 250px;
-    box-shadow: 3px 0 7px 2px rgba(0, 0, 0, 0.1);
+}
+
+#page-mod-booking-view .mod-booking-view-list-image.rounded-left {
+    box-shadow: 5px 0 10px 1px rgba(0, 0, 0, 0.2);
+}
+
+#page-mod-booking-view .mod-booking-view-list-image.rounded-right {
+    box-shadow: -5px 0 10px 1px rgba(0, 0, 0, 0.2);
 }
 
 #page-mod-booking-editoptions div[id^='fgroup_id_buttonar_'] {
