Improvement: GH-709 Empty tabs

--- a/templates/mobile/mobile_mybookings_list.mustache
+++ b/templates/mobile/mobile_mybookings_list.mustache
@@ -40,7 +40,7 @@
         title="<% text %>"
         component="mod_booking"
         method="mobile_course_view"
-        [args]="{cmid: <% cmid %>, whichview: '<% label %>'}"
+        [args]="{cmid: <% cmid %>, whichview: '<% label %>', timestamp: <% timestamp %>}"
         class="<% class %>"
     >
         <% isactive %>
