--- a/templates/ruleslist.mustache
+++ b/templates/ruleslist.mustache
@@ -56,9 +56,11 @@
     {{/enableaddbutton}}
     <ul class="mt-3 list-group booking-rules-list">
         {{#rules}}
-        <li class="list-group-item">
+        <li class="list-group-item {{#isactive}}ruleactive{{/isactive}} {{^isactive}}ruleinactive{{/isactive}}">
             <div class="d-flex justify-content-between">
-                <h5>{{name}}</h5>
+                <h5>
+                    {{name}}
+                </h5>
                 <div class="btn-group" role="group" aria-label="Booking rule buttons">
                     <div class="btn btn-sm btn-outline-danger" data-action="delete" data-id="{{id}}" data-name="{{name}}" data-contextid="{{contextid}}">
                         <i class="fa fa-trash" aria-hidden="true"></i> {{#str}} delete {{/str}}
@@ -69,6 +71,20 @@
                 </div>
             </div>
             <div class="container">
+                <div class="row">
+                    <div class="col-sm-1 text-right">
+                        <small>
+                            {{#isactive}}<i class="fa fa-check" aria-hidden="true"></i> {{/isactive}}
+                            {{^isactive}}<i class="fa fa-ban" aria-hidden="true"></i> {{/isactive}}
+                        </small>
+                    </div>
+                    <div class="col-sm-11">
+                        <small>
+                            {{#isactive}} {{#str}} bookingruleisactive, mod_booking {{/str}} {{/isactive}}
+                            {{^isactive}} {{#str}} bookingruleisnotactive, mod_booking {{/str}} {{/isactive}}
+                        </small>
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col-sm-1 text-right">
                         <small><i class="fa fa-bolt" aria-hidden="true"></i></small>
