New feature: Add possibility to display the values of any booking option customfields on detail page. #774

--- a/templates/bookingoption_description_view.mustache
+++ b/templates/bookingoption_description_view.mustache
@@ -149,6 +149,7 @@
                 {{sport}}
             </h6>
             {{#description}}<div class="content"><p>{{{.}}}</p></div>{{/description}}
+            {{#optionviewcustomfields}}{{{.}}}{{/optionviewcustomfields}}
             {{#attachments}}{{{.}}}{{/attachments}}
             {{> mod_booking/bookingoption_description_teachers }}
             {{#datesexist}}
