Improvement: Add class to identify card for imagelefthalf.

--- a/templates/table_list_row.mustache
+++ b/templates/table_list_row.mustache
@@ -117,7 +117,7 @@
 }}
 
 {{#showheaderimagelefthalf}}
-<div class="card border
+<div class="imagelefthalfcard card rounded-0
   pl-0 pr-3 pt-0 pb-0
   sk-fade ml-0 mr-0 mb-3
   flex-md-row align-items-center row gx-0" {{#datafields}} data-{{key}}="{{value}}" {{/datafields}}>
