--- a/templates/table_list_row.mustache
+++ b/templates/table_list_row.mustache
@@ -130,7 +130,7 @@
   flex-md-row align-items-center row gx-0" {{#datafields}} data-{{key}}="{{value}}" {{/datafields}}>
 {{/showheaderimagelefthalf}}
   <div class="content w-100">
-    <div class="row mod-booking-row {{rowclasses}} {{rowid}} {{#noheaderimage}}p-3{{/noheaderimage}}">
+    <div class="row mod-booking-row {{rowclasses}} {{rowid}} {{#noheaderimage}}p-3{{/noheaderimage}} {{#showheaderimagelefthalf}}m-0{{/showheaderimagelefthalf}}">
       {{#showheaderimageleft}}
         {{#headerimage}}
         <div class="mod-booking-view-list-image-container col-md-3">
