Improvement: booking mobile stylings

--- a/templates/mobile/mobile_mybookings_list.mustache
+++ b/templates/mobile/mobile_mybookings_list.mustache
@@ -59,7 +59,7 @@
         <ion-card-content>
             <br>
             <%# sessions %>
-                <div><% coursestarttime %> - <% courseendtime %></div>
+                <div><% concatinatedstartendtime %></div>
             <%/ sessions %>
 
             <%# collapsedsessions.0 %>
