Improvement: only output email key if email exists

--- a/templates/mobile/mobile_booking_option_details.mustache
+++ b/templates/mobile/mobile_booking_option_details.mustache
@@ -26,7 +26,9 @@
             <%#teachers%>
             <b>{{ 'plugin.mod_booking.firstname' | translate }}</b>: <% firstname %> <br>
             <b>{{ 'plugin.mod_booking.lastname' | translate }}</b>: <% lastname %> <br>
-            <b>{{ 'plugin.mod_booking.email' | translate }}</b>: <% email %> <br>
+            <%#email%>
+                <b>{{ 'plugin.mod_booking.email' | translate }}</b>: <% email %> <br>
+            <%/email%>
             <%/teachers%>
 
             <br>
