Improvement: Fix Link on course in Mobile App

--- a/templates/mobile/mobile_booking_option_details.mustache
+++ b/templates/mobile/mobile_booking_option_details.mustache
@@ -55,7 +55,7 @@
                     </ion-button>
                     <%#linktomoodlecourseadditionalbutton%>
                         <br>
-                        <ion-button href="<% linktomoodlecourseadditionalbutton %>">
+                        <ion-button href="<% linktomoodlecourseadditionalbutton %>" data-open-in="app">
                             <ion-icon name="school" style="margin-right: 8px; font-size: 18px;"></ion-icon>
                             {{ 'plugin.mod_booking.gotomoodlecourse' | translate }}
                         </ion-button>
