--- a/templates/booking_history.mustache
+++ b/templates/booking_history.mustache
@@ -30,7 +30,7 @@
     }
 }}
 <div class="mt-3">
-  <a class="btn btn-link" data-toggle="collapse" href="#bookinghistorycontainer-optionid-{{optionid}}" role="button" aria-expanded="false" aria-controls="collapseExample">
+  <a class="btn btn-link" data-toggle="collapse" href="#bookinghistorycontainer-optionid-{{optionid}}" role="button" aria-expanded="false" aria-controls="bookinghistorycontainer-optionid-{{optionid}}">
     <i class="fa fa-history" aria-hidden="true"></i>&nbsp;{{#str}} bookinghistory, mod_booking {{/str}}
   </a>
 </div>
