Next step for template switcher

--- a/templates/table_cards_container.mustache
+++ b/templates/table_cards_container.mustache
@@ -92,6 +92,7 @@
                          {{> local_wunderbyte_table/component_edit }}
                     </div>
                     <div class="ml-auto">
+                         {{> local_wunderbyte_table/component_switchtemplates }}
                          {{> local_wunderbyte_table/component_sort }}
                          {{> local_wunderbyte_table/component_search }}
                     </div>
