--- a/templates/table_list_container.mustache
+++ b/templates/table_list_container.mustache
@@ -93,6 +93,7 @@
                          {{> local_wunderbyte_table/component_print }}
                     </div>
                     <div class="ml-auto">
+                         {{> local_wunderbyte_table/component_switchtemplates }}
                          {{> local_wunderbyte_table/component_sort }}
                          {{> local_wunderbyte_table/component_search }}
                     </div>
